--- a/pretty/GameUserSettings.ini
+++ b/pretty/GameUserSettings.ini
@@ -1,41 +1,78 @@
+#######################################################################################################
+#   ___ ___ _____   _____ ___          ___ ___  _  _ ___ ___ ___ _   _ ___    _ _____ ___ ___  _  _   #
+#  / __| __| _ \ \ / / __| _ \  ___   / __/ _ \| \| | __|_ _/ __| | | | _ \  /_\_   _|_ _/ _ \| \| |  #
+#  \__ \ _||   /\ V /| _||   / |___| | (_| (_) | .` | _| | | (_ | |_| |   / / _ \| |  | | (_) | .` |  #
+#  |___/___|_|_\ \_/ |___|_|_\        \___\___/|_|\_|_| |___\___|\___/|_|_\/_/ \_\_| |___\___/|_|\_|  #
+#                                                                                                     #
+#######################################################################################################
 [/Script/ShooterGame.ShooterGameUserSettings]
 MasterAudioVolume=1.0
 MusicAudioVolume=1.0
 SFXAudioVolume=1.0
 CameraShakeScale=1.0
-bFirstPersonRiding=False; If true, forces first-person perspective when riding dinos.
-bThirdPersonPlayer=False; If true, enables third-person perspective for players.
-bShowStatusNotificationMessages=True; If true, shows status notification messages.
-TrueSkyQuality=0.270000; Controls the quality of the sky.
+# If true, forces first-person perspective when riding dinos.
+bFirstPersonRiding=False
+# If true, enables third-person perspective for players.
+bThirdPersonPlayer=False
+# If true, shows status notification messages.
+bShowStatusNotificationMessages=True
+# Controls the quality of the sky.
+TrueSkyQuality=0.27
 FOVMultiplier=1.0
 GroundClutterDensity=1.0
-bFilmGrain=False; If true, enables film grain effect.
-bMotionBlur=False; If true, enables motion blur effect.
-bUseDFAO=True; If true, enables Distance Field Ambient Occlusion.
-bUseSSAO=True; If true, enables Screen Space Ambient Occlusion.
-bShowChatBox=True; If true, shows the chat box.
-bCameraViewBob=True; If true, enables camera view bobbing.
-bInvertLookY=False; If true, inverts the Y-axis for looking.
-bFloatingNames=True; If true, shows floating names above characters.
-bChatBubbles=True; If true, shows chat bubbles above characters when they speak.
-bJoinNotifications=True; If true, shows notifications when players join.
-bCraftablesShowAllItems=True; If true, shows all items in the crafting menu.
+# If true, enables film grain effect.
+bFilmGrain=False
+# If true, enables motion blur effect.
+bMotionBlur=False
+# If true, enables Distance Field Ambient Occlusion.
+bUseDFAO=True
+# If true, enables Screen Space Ambient Occlusion.
+bUseSSAO=True
+# If true, shows the chat box.
+bShowChatBox=True
+# If true, enables camera view bobbing.
+bCameraViewBob=True
+# If true, inverts the Y-axis for looking.
+bInvertLookY=False
+# If true, shows floating names above characters.
+bFloatingNames=True
+# If true, shows chat bubbles above characters when they speak.
+bChatBubbles=True
+# If true, shows notifications when players join.
+bJoinNotifications=True
+# If true, shows all items in the crafting menu.
+bCraftablesShowAllItems=True
 LookLeftRightSensitivity=1.0
 LookUpDownSensitivity=1.0
-GraphicsQuality=3; Sets the graphics quality level. (0=low 1=medium 2=high 3=epic 4=custom)
-ActiveLingeringWorldTiles=10; Controls the number of active lingering world tiles.
-bUseVSync=False; If true, enables vertical sync.
-ResolutionSizeX=1920; Sets the X resolution size.
-ResolutionSizeY=1080; Sets the Y resolution size.
-LastUserConfirmedResolutionSizeX=1920; Sets the last user confirmed X resolution size.
-LastUserConfirmedResolutionSizeY=1080; Sets the last user confirmed Y resolution size.
-WindowPosX=-1; Sets the X position of the window.
-WindowPosY=-1; Sets the Y position of the window.
-bUseDesktopResolutionForFullscreen=False; If true, uses the desktop resolution for fullscreen mode.
-FullscreenMode=2; Sets the fullscreen mode.
-LastConfirmedFullscreenMode=2; Sets the last confirmed fullscreen mode.
-Version=5; Sets the version number.
-
+# Sets the graphics quality level.
+# (0=low 1=medium 2=high 3=epic 4=custom)
+GraphicsQuality=3
+# Controls the number of active lingering world tiles.
+ActiveLingeringWorldTiles=10
+# If true, enables vertical sync.
+bUseVSync=False
+# Sets the X resolution size.
+ResolutionSizeX=1920
+# Sets the Y resolution size.
+ResolutionSizeY=1080
+# Sets the last user confirmed X resolution size.
+LastUserConfirmedResolutionSizeX=1920
+# Sets the last user confirmed Y resolution size.
+LastUserConfirmedResolutionSizeY=1080
+# Sets the X position of the window.
+WindowPosX=-1
+# Sets the Y position of the window.
+WindowPosY=-1
+# If true, uses the desktop resolution for fullscreen mode.
+bUseDesktopResolutionForFullscreen=False
+# Sets the fullscreen mode.
+FullscreenMode=2
+# Sets the last confirmed fullscreen mode.
+LastConfirmedFullscreenMode=2
+# Sets the version number.
+Version=5
+;
+;
 [ScalabilityGroups]
 sg.ResolutionQuality=100
 sg.ViewDistanceQuality=3
@@ -48,14 +85,17 @@ sg.TrueSkyQuality=3
 sg.GroundClutterQuality=3
 sg.IBLQuality=1
 sg.HeightFieldShadowQuality=3
-
+;
+;
 [SessionSettings]
-; server name to lookup under unofficial sessions:
+# server name to lookup under unofficial sessions:
 SessionName=PURPLE-S3X
-
+;
+;
 [/Script/Engine.GameSession]
 MaxPlayers=16
-
+;
+;
 [ServerSettings]
 ServerAdminPassword=allday
 ServerPassword=allday
@@ -120,11 +160,11 @@ OxygenSwimSpeedStatMultiplier=0.2
 StructurePreventResourceRadiusMultiplier=1.0
 PlatformSaddleBuildAreaBoundsMultiplier=1.0
 StructurePickupTimeAfterPlacement=99999
-StructurePickupHoldDuration=0.500000
+StructurePickupHoldDuration=0.5
 AllowIntegratedSPlusStructures=True
 RaidDinoCharacterFoodDrainMultiplier=1.0
 KickIdlePlayersPeriod=3600.0
-; 8000 dinos / 16 slots = 500 each.
+# 8000 dinos / 16 slots = 500 each.
 MaxTamedDinos=8000.0
 RCONServerGameLogBuffer=1000.0
 AllowRaidDinoFeeding=True
@@ -160,17 +200,18 @@ TamingSpeedMultiplier=10.0
 AlwaysAllowStructurePickup=True
 PlayerCharacterHealthRecoveryMultiplier=5.0
 DinoCharacterHealthRecoveryMultiplier=10.0
-; players take less damage
+# players take less damage
 PlayerResistanceMultiplier=0.2
-; structures won't take damage
+# structures won't take damage
 StructureResistanceMultiplier=0
-; increase/decrease how many dinos spawn
+# increase/decrease how many dinos spawn
 DinoCountMultiplier=1.5
-; 0.25 is the most intense
+# 0.25 is the most intense
 VolcanoIntensity=0.25
-; 0.1 is the quickest. default = 5000 - 15,000 seconds at 1.0
+# 0.1 is the quickest. default = 5000 - 15,000 seconds at 1.0
 VolcanoInterval=0.1
-
+;
+;
 [MessageOfTheDay]
 Message=SupBitches!
 Duration=10
