--- a/pretty/Game.ini
+++ b/pretty/Game.ini
@@ -189,6 +189,9 @@ MaxFallSpeedMultiplier=20.0
 ;
 ;
 ;
+# EntryWeight - is the % chance to spawn compared to other dinos.
+# MaxPercentageOfDesiredNumToAllow - is the total chance this dino can occupy in the spawning
+# area at the same time. 1.0 = 100% of the dinos in the spawn can be this dino.
 ########################################
 #   ___ _  _  ___  ___ _  _ _____  __  #
 #  | _ \ || |/ _ \| __| \| |_ _\ \/ /  #
@@ -197,11 +200,11 @@ MaxFallSpeedMultiplier=20.0
 #                                      #
 ########################################
 ConfigAddNPCSpawnEntriesContainer=(
-    NPCSpawnEntriesContainerClassString="RedwoodsSpawner",
+    NPCSpawnEntriesContainerClassString="DinoSpawnEntriesTheRedwoods_PGM_C",
     NPCSpawnEntries=(
         (
             AnEntryName="PhoenixSpawner",
-            EntryWeight=0.1,
+            EntryWeight=1.0,
             NPCsToSpawnStrings=(
                 "Phoenix_Character_BP_C"
             )
@@ -210,7 +213,7 @@ ConfigAddNPCSpawnEntriesContainer=(
     NPCSpawnLimits=(
         (
             NPCClassString="Phoenix_Character_BP_C",
-            MaxPercentageOfDesiredNumToAllow=0.1
+            MaxPercentageOfDesiredNumToAllow=1.0
         )
     )
 )
@@ -222,7 +225,7 @@ ConfigAddNPCSpawnEntriesContainer=(
 #                                                      #
 ########################################################
 ConfigAddNPCSpawnEntriesContainer=(
-    NPCSpawnEntriesContainerClassString="DinoSpawnEntriesSnow_C",
+    NPCSpawnEntriesContainerClassString="DinoSpawnEntriesSnow_PGM_C",
     NPCSpawnEntries=(
         (
             AnEntryName="ManagarmrSpawns",
@@ -247,7 +250,7 @@ ConfigAddNPCSpawnEntriesContainer=(
 #                                                        #
 ##########################################################
 ConfigAddNPCSpawnEntriesContainer=(
-    NPCSpawnEntriesContainerClassString="DinoSpawnEntriesSnow_C",
+    NPCSpawnEntriesContainerClassString="DinoSpawnEntriesSnowMountain_PGM_C",
     NPCSpawnEntries=(
         (
             AnEntryName="AstrocetusSpawn",
@@ -360,7 +363,7 @@ NPCReplacements=(
 #  |_| |____/_/ \_\_| |___|_|_\       |___/ |_/_/ \_\_| |___/  #
 #                                                              #
 ################################################################
-PerLevelStatsMultiplier_Player[0]=10.0
+PerLevelStatsMultiplier_Player[0]=2.0
 PerLevelStatsMultiplier_Player[1]=10.0
 PerLevelStatsMultiplier_Player[2]=10.0
 PerLevelStatsMultiplier_Player[3]=100.0
@@ -369,7 +372,7 @@ PerLevelStatsMultiplier_Player[5]=100.0
 PerLevelStatsMultiplier_Player[6]=10000.0
 PerLevelStatsMultiplier_Player[7]=10000.0
 PerLevelStatsMultiplier_Player[8]=10.0
-PerLevelStatsMultiplier_Player[9]=10.0
+PerLevelStatsMultiplier_Player[9]=5.0
 PerLevelStatsMultiplier_Player[10]=100.0
 PerLevelStatsMultiplier_Player[11]=20.0
 ####################################################################################
@@ -379,7 +382,7 @@ PerLevelStatsMultiplier_Player[11]=20.0
 #    |_/_/ \_\_|  |_|___|___/  |___/___|_|\_|\___/        |___/ |_/_/ \_\_| |___/  #
 #                                                                                  #
 ####################################################################################
-PerLevelStatsMultiplier_DinoTamed[0]=5.0
+PerLevelStatsMultiplier_DinoTamed[0]=1.0
 PerLevelStatsMultiplier_DinoTamed[1]=100.0
 PerLevelStatsMultiplier_DinoTamed[2]=100.0
 PerLevelStatsMultiplier_DinoTamed[3]=100.0
@@ -387,8 +390,8 @@ PerLevelStatsMultiplier_DinoTamed[4]=100.0
 PerLevelStatsMultiplier_DinoTamed[5]=100.0
 PerLevelStatsMultiplier_DinoTamed[6]=10000.0
 PerLevelStatsMultiplier_DinoTamed[7]=10000.0
-PerLevelStatsMultiplier_DinoTamed[8]=5.0
-PerLevelStatsMultiplier_DinoTamed[9]=20.0
+PerLevelStatsMultiplier_DinoTamed[8]=1.0
+PerLevelStatsMultiplier_DinoTamed[9]=10.0
 PerLevelStatsMultiplier_DinoTamed[10]=100.0
 PerLevelStatsMultiplier_DinoTamed[11]=100.0
 #################################################################################
@@ -398,7 +401,8 @@ PerLevelStatsMultiplier_DinoTamed[11]=100.0
 #    \_/\_/ |___|____|___/  |___/___|_|\_|\___/        |___/ |_/_/ \_\_| |___/  #
 #                                                                               #
 #################################################################################
-PerLevelStatsMultiplier_DinoWild[2]=0.001
+PerLevelStatsMultiplier_DinoWild[0]=10.0
+PerLevelStatsMultiplier_DinoWild[8]=10.0
 ;
 ;
 ;
