--- a/pretty/GameUserSettings.ini
+++ b/pretty/GameUserSettings.ini
@@ -200,8 +200,6 @@ TamingSpeedMultiplier=10.0
 AlwaysAllowStructurePickup=True
 PlayerCharacterHealthRecoveryMultiplier=5.0
 DinoCharacterHealthRecoveryMultiplier=10.0
-# players take less damage
-PlayerResistanceMultiplier=0.2
 # structures won't take damage
 StructureResistanceMultiplier=0
 # increase/decrease how many dinos spawn
@@ -210,6 +208,9 @@ DinoCountMultiplier=1.5
 VolcanoIntensity=0.25
 # 0.1 is the quickest. default = 5000 - 15,000 seconds at 1.0
 VolcanoInterval=0.1
+# make sure this is also set to true in the general settings if clamping item stats.
+ClampItemStats=True
+playerResistanceMultiplier=0.01
 ;
 ;
 [MessageOfTheDay]
