--- a/pretty/Game.ini
+++ b/pretty/Game.ini
@@ -200,11 +200,11 @@ MaxFallSpeedMultiplier=20.0
 #                                      #
 ########################################
 ConfigAddNPCSpawnEntriesContainer=(
-    NPCSpawnEntriesContainerClassString="DinoSpawnEntriesTheRedwoods_PGM_C",
+    NPCSpawnEntriesContainerClassString="DinoSpawnEntriesRedwoods_C",
     NPCSpawnEntries=(
         (
             AnEntryName="PhoenixSpawner",
-            EntryWeight=1.0,
+            EntryWeight=1000.0,
             NPCsToSpawnStrings=(
                 "Phoenix_Character_BP_C"
             )
@@ -213,7 +213,7 @@ ConfigAddNPCSpawnEntriesContainer=(
     NPCSpawnLimits=(
         (
             NPCClassString="Phoenix_Character_BP_C",
-            MaxPercentageOfDesiredNumToAllow=1.0
+            MaxPercentageOfDesiredNumToAllow=0.1
         )
     )
 )
@@ -225,11 +225,11 @@ ConfigAddNPCSpawnEntriesContainer=(
 #                                                      #
 ########################################################
 ConfigAddNPCSpawnEntriesContainer=(
-    NPCSpawnEntriesContainerClassString="DinoSpawnEntriesSnow_PGM_C",
+    NPCSpawnEntriesContainerClassString="DinoSpawnEntriesSnow_C",
     NPCSpawnEntries=(
         (
             AnEntryName="ManagarmrSpawns",
-            EntryWeight=0.1,
+            EntryWeight=1000.0,
             NPCsToSpawnStrings=(
                 "IceJumper_Character_BP_C"
             )
@@ -238,7 +238,7 @@ ConfigAddNPCSpawnEntriesContainer=(
     NPCSpawnLimits=(
         (
             NPCClassString="IceJumper_Character_BP_C",
-            MaxPercentageOfDesiredNumToAllow=0.01
+            MaxPercentageOfDesiredNumToAllow=0.1
         )
     )
 )
@@ -250,11 +250,11 @@ ConfigAddNPCSpawnEntriesContainer=(
 #                                                        #
 ##########################################################
 ConfigAddNPCSpawnEntriesContainer=(
-    NPCSpawnEntriesContainerClassString="DinoSpawnEntriesSnowMountain_PGM_C",
+    NPCSpawnEntriesContainerClassString="DinoSpawnEntriesSnow_C",
     NPCSpawnEntries=(
         (
             AnEntryName="AstrocetusSpawn",
-            EntryWeight=0.1,
+            EntryWeight=1000.0,
             NPCsToSpawnStrings=(
                 "SpaceWhale_Character_BP_C"
             )
@@ -263,7 +263,7 @@ ConfigAddNPCSpawnEntriesContainer=(
     NPCSpawnLimits=(
         (
             NPCClassString="SpaceWhale_Character_BP_C",
-            MaxPercentageOfDesiredNumToAllow=0.01
+            MaxPercentageOfDesiredNumToAllow=0.1
         )
     )
 )
@@ -382,7 +382,7 @@ PerLevelStatsMultiplier_Player[11]=20.0
 #    |_/_/ \_\_|  |_|___|___/  |___/___|_|\_|\___/        |___/ |_/_/ \_\_| |___/  #
 #                                                                                  #
 ####################################################################################
-PerLevelStatsMultiplier_DinoTamed[0]=0.2
+PerLevelStatsMultiplier_DinoTamed[0]=0.1
 PerLevelStatsMultiplier_DinoTamed[1]=100.0
 PerLevelStatsMultiplier_DinoTamed[2]=100.0
 PerLevelStatsMultiplier_DinoTamed[3]=100.0
