increase taming speed, remove space whale since it doesn't work.

--- a/pretty/Game.ini
+++ b/pretty/Game.ini
@@ -160,7 +160,7 @@ HexagonRewardMultiplier=99999
 # the speed stat of flying dinosaurs through leveling.
 bAllowFlyerSpeedLeveling=false
 # values > 1.0 make taming faster.
-TamingSpeedMultiplier=100.0
+TamingSpeedMultiplier=1000.0
 # values < 1.0 cause resource nodes to respawn more frequently.
 ResourcesRespawnPeriodMultiplier=0.2
 # this allows engrams to be unlocked automatically as you level up.
@@ -192,28 +192,103 @@ MaxFallSpeedMultiplier=20.0
 # EntryWeight - is the % chance to spawn compared to other dinos.
 # MaxPercentageOfDesiredNumToAllow - is the total chance this dino can occupy in the spawning
 # area at the same time. 1.0 = 100% of the dinos in the spawn can be this dino.
-########################################
-#   ___ _  _  ___  ___ _  _ _____  __  #
-#  | _ \ || |/ _ \| __| \| |_ _\ \/ /  #
-#  |  _/ __ | (_) | _|| .` || | >  <   #
-#  |_| |_||_|\___/|___|_|\_|___/_/\_\  #
-#                                      #
-########################################
+#########################################################################################
+#     _   _    ___ _  _   _     ___ ___ ___ ___  __      ____   ____   _____ ___ _  _   #
+#    /_\ | |  | _ \ || | /_\   | __|_ _| _ \ __| \ \    / /\ \ / /\ \ / / __| _ \ \| |  #
+#   / _ \| |__|  _/ __ |/ _ \  | _| | ||   / _|   \ \/\/ /  \ V /  \ V /| _||   / .` |  #
+#  /_/ \_\____|_| |_||_/_/ \_\ |_| |___|_|_\___|   \_/\_/    |_|    \_/ |___|_|_\_|\_|  #
+#                                                                                       #
+#########################################################################################
 ConfigAddNPCSpawnEntriesContainer=(
-    NPCSpawnEntriesContainerClassString="DinoSpawnEntriesRedwoods_C",
+    NPCSpawnEntriesContainerClassString="Fjordur_FireWyvernEntries_C",
     NPCSpawnEntries=(
         (
-            AnEntryName="PhoenixSpawner",
-            EntryWeight=1000.0,
+            AnEntryName="MegaWyvernFireSpawner",
+            EntryWeight=0.33,
             NPCsToSpawnStrings=(
-                "Phoenix_Character_BP_C"
+                "MegaWyvern_Character_BP_Fire_C"
             )
         )
     ),
     NPCSpawnLimits=(
         (
-            NPCClassString="Phoenix_Character_BP_C",
-            MaxPercentageOfDesiredNumToAllow=0.1
+            NPCClassString="MegaWyvern_Character_BP_Fire_C",
+            MaxPercentageOfDesiredNumToAllow=0.5
+        )
+    )
+)
+##################################################################################
+#   ___  ___  _  _ ___   ___ ___ ___ ___  __      ____   ____   _____ ___ _  _   #
+#  | _ )/ _ \| \| | __| | __|_ _| _ \ __| \ \    / /\ \ / /\ \ / / __| _ \ \| |  #
+#  | _ \ (_) | .` | _|  | _| | ||   / _|   \ \/\/ /  \ V /  \ V /| _||   / .` |  #
+#  |___/\___/|_|\_|___| |_| |___|_|_\___|   \_/\_/    |_|    \_/ |___|_|_\_|\_|  #
+#                                                                                #
+##################################################################################
+ConfigAddNPCSpawnEntriesContainer=(
+    NPCSpawnEntriesContainerClassString="Fjordur_FireWyvernEntries_C",
+    NPCSpawnEntries=(
+        (
+            AnEntryName="BoneMegaWyvernFireSpawner",
+            EntryWeight=0.33,
+            NPCsToSpawnStrings=(
+                "Bone_MegaWyvern_Character_BP_Fire_C"
+            )
+        )
+    ),
+    NPCSpawnLimits=(
+        (
+            NPCClassString="Bone_MegaWyvern_Character_BP_Fire_C",
+            MaxPercentageOfDesiredNumToAllow=0.5
+        )
+    )
+)
+###########################################################################################
+#   _______  __  __ ___ ___ ___   ___ ___ ___ ___  __      ____   ____   _____ ___ _  _   #
+#  |_  / _ \|  \/  | _ )_ _| __| | __|_ _| _ \ __| \ \    / /\ \ / /\ \ / / __| _ \ \| |  #
+#   / / (_) | |\/| | _ \| || _|  | _| | ||   / _|   \ \/\/ /  \ V /  \ V /| _||   / .` |  #
+#  /___\___/|_|  |_|___/___|___| |_| |___|_|_\___|   \_/\_/    |_|    \_/ |___|_|_\_|\_|  #
+#                                                                                         #
+###########################################################################################
+ConfigAddNPCSpawnEntriesContainer=(
+    NPCSpawnEntriesContainerClassString="Fjordur_FireWyvernEntries_C",
+    NPCSpawnEntries=(
+        (
+            AnEntryName="ZombieMegaWyvernFireSpawner",
+            EntryWeight=0.33,
+            NPCsToSpawnStrings=(
+                "Wyvern_Character_BP_ZombieFire_C"
+            )
+        )
+    ),
+    NPCSpawnLimits=(
+        (
+            NPCClassString="Wyvern_Character_BP_ZombieFire_C",
+            MaxPercentageOfDesiredNumToAllow=0.5
+        )
+    )
+)
+########################################################################################################
+#    ___ _____   _____ _____ _   _      ___ __  __ ___ ___ ___  __      ____   ____   _____ ___ _  _   #
+#   / __| _ \ \ / / __|_   _/_\ | |    | __|  \/  | _ ) __| _ \ \ \    / /\ \ / /\ \ / / __| _ \ \| |  #
+#  | (__|   /\ V /\__ \ | |/ _ \| |__  | _|| |\/| | _ \ _||   /  \ \/\/ /  \ V /  \ V /| _||   / .` |  #
+#   \___|_|_\ |_| |___/ |_/_/ \_\____| |___|_|  |_|___/___|_|_\   \_/\_/    |_|    \_/ |___|_|_\_|\_|  #
+#                                                                                                      #
+########################################################################################################
+ConfigAddNPCSpawnEntriesContainer=(
+    NPCSpawnEntriesContainerClassString="Fjordur_Volcano_DinoSpawnEntries_C",
+    NPCSpawnEntries=(
+        (
+            AnEntryName="CrystalWyvernEmberSpawner",
+            EntryWeight=1.0,
+            NPCsToSpawnStrings=(
+                "CrystalWyvern_Character_BP_Ember_C"
+            )
+        )
+    ),
+    NPCSpawnLimits=(
+        (
+            NPCClassString="CrystalWyvern_Character_BP_Ember_C",
+            MaxPercentageOfDesiredNumToAllow=0.5
         )
     )
 )
@@ -229,7 +304,7 @@ ConfigAddNPCSpawnEntriesContainer=(
     NPCSpawnEntries=(
         (
             AnEntryName="ManagarmrSpawns",
-            EntryWeight=1000.0,
+            EntryWeight=1.0,
             NPCsToSpawnStrings=(
                 "IceJumper_Character_BP_C"
             )
@@ -238,32 +313,7 @@ ConfigAddNPCSpawnEntriesContainer=(
     NPCSpawnLimits=(
         (
             NPCClassString="IceJumper_Character_BP_C",
-            MaxPercentageOfDesiredNumToAllow=0.1
-        )
-    )
-)
-##########################################################
-#     _   ___ _____ ___  ___   ___ ___ _____ _   _ ___   #
-#    /_\ / __|_   _| _ \/ _ \ / __| __|_   _| | | / __|  #
-#   / _ \\__ \ | | |   / (_) | (__| _|  | | | |_| \__ \  #
-#  /_/ \_\___/ |_| |_|_\\___/ \___|___| |_|  \___/|___/  #
-#                                                        #
-##########################################################
-ConfigAddNPCSpawnEntriesContainer=(
-    NPCSpawnEntriesContainerClassString="DinoSpawnEntriesSnow_C",
-    NPCSpawnEntries=(
-        (
-            AnEntryName="AstrocetusSpawn",
-            EntryWeight=1000.0,
-            NPCsToSpawnStrings=(
-                "SpaceWhale_Character_BP_C"
-            )
-        )
-    ),
-    NPCSpawnLimits=(
-        (
-            NPCClassString="SpaceWhale_Character_BP_C",
-            MaxPercentageOfDesiredNumToAllow=0.1
+            MaxPercentageOfDesiredNumToAllow=0.01
         )
     )
 )
