add stack sizes and increase loot rates for element/shards

--- a/pretty/Game.ini
+++ b/pretty/Game.ini
@@ -492,6 +492,275 @@ ConfigOverrideItemMaxQuantity=(
         bIgnoreMultiplier=true
     )
 )
+# AMBERGRIS - STACK
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemResource_Ambergris_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+# CHARGE BATTERY - STACK
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItem_ChargeBattery_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+# DERMIS - STACK
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItem_TaxidermyDermis_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+# FERTILIZER - STACK
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemConsumable_Fertilizer_Compost_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+# GOLDEN NUGGET - STACK
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemResource_GoldenNugget_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+# HIGH QUALITY POLLEN - STACK
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemResource_HighQualityPollen_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+# PRIMAL CRYSTAL - STACK
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemResource_Crystal_IslesPrimal_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+# UNSTABLE ELEMENT - STACK
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemResource_ElementRefined_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+# UNSTABLE ELEMENT SHARD - STACK
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemResource_ShardRefined_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+# ANIMAL FECES - STACK
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemConsumable_DinoPoopSmall_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemConsumable_HumanPoop_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemConsumable_DinoPoopMedium_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemConsumable_DinoPoopLarge_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemConsumable_DinoPoopMassive_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemConsumable_OwlPellet_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+################################################################################
+#     _   ___ _____ ___ ___ _   ___ _____ ___         ___ _____ _   ___ _  __  #
+#    /_\ | _ \_   _|_ _| __/_\ / __|_   _/ __|  ___  / __|_   _/_\ / __| |/ /  #
+#   / _ \|   / | |  | || _/ _ \ (__  | | \__ \ |___| \__ \ | |/ _ \ (__| ' <   #
+#  /_/ \_\_|_\ |_| |___|_/_/ \_\___| |_| |___/       |___/ |_/_/ \_\___|_|\_\  #
+#                                                                              #
+################################################################################
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemArtifact_Extinction_IceKaiju_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemArtifact_Extinction_ForestKaiju_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemArtifact_Extinction_DesertKaiju_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemArtifactAB_3_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemArtifactAB_2_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemArtifactAB_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemArtifactSE_03_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemArtifactSE_02_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemArtifactSE_01_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemArtifact_09_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemArtifact_06_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemArtifact_02_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemArtifact_03_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemArtifactAB_4_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemArtifact_08_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemArtifact_01_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemArtifact_07_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemArtifact_04_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemArtifact_11_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemArtifact_05_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
+ConfigOverrideItemMaxQuantity=(
+    ItemClassString="PrimalItemArtifact_12_C",
+    Quantity=(
+        MaxItemQuantity=1000,
+        bIgnoreMultiplier=true
+    )
+)
 ;
 ;
 ;
@@ -536,17 +805,32 @@ ConfigOverrideSupplyCrateItems=(
                 (
                     EntryWeight=1.0,
                     ItemClassStrings=(
-                        "PrimalItemStructure_Toilet_C"
+                        "PrimalItemResource_ElementShard_C"
                     ),
                     ItemsWeights=(
                         1.0
                     ),
-                    MinQuantity=1.0,
-                    MaxQuantity=1.0,
-                    MinQuality=5.0,
-                    MaxQuality=5.0,
+                    MinQuantity=100.0,
+                    MaxQuantity=500.0,
+                    MinQuality=1.0,
+                    MaxQuality=1.0,
                     bForceBlueprint=false,
-                    ChanceToBeBlueprintOverride=0.5
+                    ChanceToBeBlueprintOverride=0.2
+                ),
+                (
+                    EntryWeight=1.0,
+                    ItemClassStrings=(
+                        "PrimalItemResource_Element_C"
+                    ),
+                    ItemsWeights=(
+                        1.0
+                    ),
+                    MinQuantity=5.0,
+                    MaxQuantity=25.0,
+                    MinQuality=1.0,
+                    MaxQuality=1.0,
+                    bForceBlueprint=false,
+                    ChanceToBeBlueprintOverride=0.2
                 )
             )
         )
@@ -581,12 +865,27 @@ ConfigOverrideSupplyCrateItems=(
                     ItemsWeights=(
                         1.0
                     ),
-                    MinQuantity=100.0,
+                    MinQuantity=250.0,
                     MaxQuantity=500.0,
                     MinQuality=1.0,
                     MaxQuality=1.0,
                     bForceBlueprint=false,
-                    ChanceToBeBlueprintOverride=0.5
+                    ChanceToBeBlueprintOverride=0.2
+                ),
+                (
+                    EntryWeight=1.0,
+                    ItemClassStrings=(
+                        "PrimalItemResource_Element_C"
+                    ),
+                    ItemsWeights=(
+                        1.0
+                    ),
+                    MinQuantity=10.0,
+                    MaxQuantity=25.0,
+                    MinQuality=1.0,
+                    MaxQuality=1.0,
+                    bForceBlueprint=false,
+                    ChanceToBeBlueprintOverride=0.2
                 )
             )
         )
@@ -621,12 +920,27 @@ ConfigOverrideSupplyCrateItems=(
                     ItemsWeights=(
                         1.0
                     ),
-                    MinQuantity=200.0,
+                    MinQuantity=250.0,
                     MaxQuantity=1000.0,
                     MinQuality=1.0,
                     MaxQuality=1.0,
                     bForceBlueprint=false,
-                    ChanceToBeBlueprintOverride=0.5
+                    ChanceToBeBlueprintOverride=0.2
+                ),
+                (
+                    EntryWeight=1.0,
+                    ItemClassStrings=(
+                        "PrimalItemResource_Element_C"
+                    ),
+                    ItemsWeights=(
+                        1.0
+                    ),
+                    MinQuantity=15.0,
+                    MaxQuantity=50.0,
+                    MinQuality=1.0,
+                    MaxQuality=1.0,
+                    bForceBlueprint=false,
+                    ChanceToBeBlueprintOverride=0.2
                 )
             )
         )
@@ -656,17 +970,32 @@ ConfigOverrideSupplyCrateItems=(
                 (
                     EntryWeight=1.0,
                     ItemClassStrings=(
+                        "PrimalItemResource_ElementShard_C"
+                    ),
+                    ItemsWeights=(
+                        1.0
+                    ),
+                    MinQuantity=500.0,
+                    MaxQuantity=1000.0,
+                    MinQuality=1.0,
+                    MaxQuality=1.0,
+                    bForceBlueprint=false,
+                    ChanceToBeBlueprintOverride=0.2
+                ),
+                (
+                    EntryWeight=1.0,
+                    ItemClassStrings=(
                         "PrimalItemResource_Element_C"
                     ),
                     ItemsWeights=(
                         1.0
                     ),
-                    MinQuantity=5.0,
-                    MaxQuantity=25.0,
+                    MinQuantity=20.0,
+                    MaxQuantity=50.0,
                     MinQuality=1.0,
                     MaxQuality=1.0,
                     bForceBlueprint=false,
-                    ChanceToBeBlueprintOverride=0.5
+                    ChanceToBeBlueprintOverride=0.2
                 )
             )
         )
@@ -696,17 +1025,32 @@ ConfigOverrideSupplyCrateItems=(
                 (
                     EntryWeight=1.0,
                     ItemClassStrings=(
+                        "PrimalItemResource_ElementShard_C"
+                    ),
+                    ItemsWeights=(
+                        1.0
+                    ),
+                    MinQuantity=500.0,
+                    MaxQuantity=2500.0,
+                    MinQuality=1.0,
+                    MaxQuality=1.0,
+                    bForceBlueprint=false,
+                    ChanceToBeBlueprintOverride=0.2
+                ),
+                (
+                    EntryWeight=1.0,
+                    ItemClassStrings=(
                         "PrimalItemResource_Element_C"
                     ),
                     ItemsWeights=(
                         1.0
                     ),
-                    MinQuantity=10.0,
-                    MaxQuantity=50.0,
+                    MinQuantity=25.0,
+                    MaxQuantity=100.0,
                     MinQuality=1.0,
                     MaxQuality=1.0,
                     bForceBlueprint=false,
-                    ChanceToBeBlueprintOverride=0.5
+                    ChanceToBeBlueprintOverride=0.2
                 )
             )
         )
